[package]
name = "rtime"
version = "0.1.0"
edition = "2021"
author = "Dawid Stachów <hello@dstachow.pl>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
cli-table = "0.4.7"
dialoguer = "0.11.0"
home = "0.5.5"
sqlite = "0.31.1"
colored = "2.0.4"
log = "0.4.20"
chrono = "0.4.31"
